--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,7 @@
 
           {% if site.show_downloads %}
             <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="{{ https://github.com/seboelter/Animation-in-Games-Project-2/archive/refs/heads/main.zip}}">Download this project as a .zip file</a>
             </section>
           {% endif %}
         </header>
