--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">CSCI 5611: Project 2</h1>
-          <h2 id="project_tagline">Sarah Boelter and Ebasa Temesgen</h2>       
+          <h1 id="project_title">CSCI 5611: Project 3</h1>
+          <h2 id="project_tagline">Sarah Boelter and Simanta Barman</h2>       
         </header>
     </div>
 
